updated css changes

--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 <body>
 
     <header>
-        <div class="logo">
+        <!-- <div class="logo">
             <img src="https://i.imghippo.com/files/eQZk8077RY.png" alt="Awana Logo">
-        </div>
+        </div> -->
 
           <!-- hamburger code -->
           <label for="toggle" class="hamburger">&#9776;</label>
           <input type="checkbox"id="toggle"/>
         <nav>
+            <div class="logo">
+                <img src="https://i.imghippo.com/files/eQZk8077RY.png" alt="Awana Logo">
+            </div>
 
+              <!-- hamburger code -->
+          <label for="toggle" class="hamburger">&#9776;</label>
+          <input type="checkbox"id="toggle"/>
             <ul>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Events</a></li>
                 <li><a href="#">Impacts</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Get Involved</a></li>
-                <li><a href="#" class="donate-btn">Donate</a></li>
+                <li><a href="#" class="donate-btn">Donate!</a></li>
             </ul>
         </nav>
     </header>
@@ -92,6 +98,7 @@
 
     <section class="recent-activities">
         <h2>RECENT ACTIVITIES</h2>
+      <div class="scroll-wrapper">
         <div class="activities-container">
             <div class="recent-activity">
                 <div class="activity-text">
@@ -124,6 +131,7 @@
                 </div>
             </div>
         </div>
+      </div>
     </section>
     <section class="upcoming-events">
         <div class="flower-left"></div>
